# Visia

./: .dockerignore  .env.example  .gitattributes  .gitignore  .secrets.baseline  Dockerfile  README.md  _setup_ia.py  docker-compose.yml  iniciar.bat  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
app/: main.py
app/core/: config.py  ratelimit.py  security.py
app/db/: database.py
app/frontend/: index.html
app/models/: __init__.py  usuario.py  venda.py
app/routers/: auth_router.py  predict_router.py  venda_router.py
app/schemas/: auth.py  venda.py
app/services/: predictor.py
diagramas/: Diagrama_De_Classe_Visia.html  Diagrama_Entidade_Relacionamento.html
tests/: conftest.py  test_auth.py  test_pastas.py  test_predict.py  test_sincronizacao.py  test_vendas.py
